updated dockerfile